<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
  tools:context=".ui.registration.RegisterFragment">

        <EditText
            android:id="@+id/reg_et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="15"
            android:hint="@string/s_mail"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/reg_et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="15"
            android:hint="@string/s_password"
            android:inputType="textPassword"/>
    <EditText
        android:id="@+id/reg_et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="15"
        android:hint="@string/s_user_name"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/reg_et_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="15"
        android:hint="@string/s_description"
        android:inputType="text"/>
        <Button
            android:id="@+id/reg_btn_sign_in"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_log_in"
            android:textSize="24sp"/>
/>
</LinearLayout>